iter_language/tests/corpus/invalid/apply-back-discard-with-filter.iter
queue memory

workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back {
    mode = discard
    excludes = ["*.md"]
  }
}

agent claude {
  mode = print
  command = "claude"
}
